--- a/config.json
+++ b/config.json
@@ -1,20 +1,15 @@
 {
-    "server":"0.0.0.0",
-    "server_ipv6": "[::]",
-    "local_address":"127.0.0.1",
-    "local_port":1080,
-    "port_password":{
-        "80":"password1",
-        "443":"password2"
-    },
-    "timeout":300,
-    "method":"chacha20-ietf",
-    "protocol": "auth_aes128_md5",
-    "protocol_param": "id:password",
-    "obfs": "http_simple",
-    "obfs_param": "www.189.cn",
-    "redirect": "",
-    "dns_ipv6": false,
-    "fast_open": false,
-    "workers": 1
+    "server_port" : 80,
+    "local_address" : "127.0.0.1",
+    "local_port" : 1081,
+    "timeout" : 300,
+    "method" : "rc4-md5",
+    "protocol" : "origin",
+    "protocol_param" : "",
+    "obfs" : "plain",
+    "obfs_param" : "",
+    "redirect" : "",
+    "dns_ipv6" : false,
+    "fast_open" : true,
+    "workers" : 1
 }
